<package>
  <name>x264_image_transport</name>
  <version>0.0.1</version>
  <maintainer email="Dominic.Letourneau@USherbrooke.ca">Dominic</maintainer>
  <license>BSD</license>
  <description>x264</description>
  <url>http://ros.org/wiki/x264_image_transport</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <!--<cpp lflags="-Wl,-rpath,${prefix}/lib -L/home/luke/ffmpeg_build/lib -L${prefix}/lib -lx264_image_transport -lx264 -lavcodec -lswscale -lavformat" cflags="-I${prefix}/include -I/home/luke/ffmpeg_build/include"/>-->
    <!-- <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lx264_image_transport" cflags="-I${prefix}/include"/> -->
    <image_transport plugin="${prefix}/x264_plugins.xml" />
  </export>
</package>


