<package>
  <name>x264_image_transport</name>
  <version>0.0.1</version>
  <maintainer email="Dominic.Letourneau@USherbrooke.ca">Dominic</maintainer>
  <maintainer email="wtlt@ecs.soton.ac.uk">Luke Teacy</maintainer>
  <license>BSD</license>
  <description>x264</description>
  <url>http://ros.org/wiki/x264_image_transport</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>cv_bridge</run_depend>
  <export>
    <image_transport plugin="${prefix}/x264_plugins.xml" />
  </export>
</package>


